# DatabasesProject

client-side/: CMakeLists.txt
client-side/include/: ClientActor.hpp  ClientState.hpp  Messages.hpp  MessagesData.hpp  User.hpp
client-side/src/: CMakeLists.txt  ClientActor.cpp  ClientMain.cpp
server-side/: .gitignore  CMakeLists.txt
server-side/include/: Conversation.hpp  DatabaseTalker.hpp  MessageData.hpp  Publisher.hpp  ServerActor.hpp  ServerMessages.hpp  ServerState.hpp  Subscriber.hpp  User.hpp
server-side/src/: CMakeLists.txt  DatabaseTalker.cpp  Main.cpp  Publisher.cpp  ServerActor.cpp  ServerMain.cpp  ServerState.cpp  Subscriber.cpp  a.out  connectionToDatabase.cpp
